--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -1,121 +1,138 @@
-.Navbar{
-    background-color:white;
-    height:70px
+.Navbar {
+  background-color: white;
+  height: 70px;
 }
-.navbarLogo{
-    width:180px;
-    max-height:70px;
-    
+.navbarLogo {
+  width: 180px;
+  max-height: 70px;
 }
-
-.navForm{
-    
-} 
-
-.navbarToggle{
-    margin-bottom:30px;
-    float:right
-}
-.navFormControl{
-    border-radius:25px 0px 0px 25px;
-    width:600px;
-    max-height:50px;
-    font-weight:600
-}
-.navFormButton{
-    border-radius:0px 10px 10px 0px;
-    max-height:50px;
-
+.inputForm {
+  width: 65%;
 }
 
-.Navbar i { 
-    color:orange
+.navbarToggle {
+  margin-bottom: 30px;
+  float: right;
+}
+.navFormControl {
+  border-radius: 25px 0px 0px 25px;
+
+  max-height: 50px;
+  font-weight: 600;
+}
+.navFormButton {
+  border-radius: 0px 10px 10px 0px;
+  max-height: 50px;
 }
 
-.navBadge{
-    font-size:12px;
-    margin-top:-2rem;
-    float:right
-}
-.navbariconlar{
-  
+.Navbar i {
+  color: orange;
 }
 
-.Navbar span{
-    font-weight:600
+.navBadge {
+  font-size: 12px;
+  margin-top: -2rem;
+  margin-left: -1rem;
+  float: right;
+  display: flex;
+  z-index: 100;
+  font-size: 12px;
 }
 
-@media (max-width: 575.98px) { 
-  
-    .navbarLogo{
-        position:absolute;
-        left:0px;
-        top:0px;
-      
-    }
+.Navbar span {
+  font-weight: 600;
+}
 
-    .navForm{
-        display:flex;
-        justify-content: center;
-    }
-    .navFormControl{
-        
-        display:flex;
-       
-        margin-top:40px;
-        width:210px;
-       
-     }
-     .navFormButton{
-        margin-top:40px;
-     }
-     .navbariconlar{
-        display:flex;
-        justify-content:center;
-        Z-Index:1000;
-        position: -webkit-sticky;
-        position: fixed;
-        left:0;
-        bottom: 0px;
-        width:100%;
-        background-color:whitesmoke;
-        
-      
-     }
-     .navbariconlar span{
-        font-weight:600;
-        font-size:12px;
-        padding:10px
-
-        
-        
-     }
-    
+@media (max-width: 575.98px) {
+  .navbarLogo {
+    position: absolute;
+    left: 0px;
+    top: 0px;
   }
- 
-  @media(max-width: 575.99px){
-    .navbariconlar{
-        display:none
-    }
-}
 
- // Small devices (landscape phones, less than 768px)
- @media  (max-width: 767.98px) { 
+  .navForm {
+    display: flex;
+    justify-content: center;
+  }
+  .navFormControl {
+    display: flex;
+
+    margin-top: 40px;
+    width: 210px;
+  }
+  .navFormButton {
+    margin-top: 40px;
+  }
+  .navbariconlar {
+    display: flex;
+    justify-content: center;
+    z-index: 1000;
+    position: -webkit-sticky;
+    position: fixed;
+    left: 0;
+    bottom: 0px;
+    width: 100%;
+    background-color: whitesmoke;
    
   }
- 
- // Medium devices (tablets, less than 992px)
- @media (min-width: 991.98px) { 
-    
+  .navbariconlar span {
+    font-weight: 600;
+    font-size: 15px;
+    padding: 2px;
   }
-  @media (max-width: 1600.98px) { 
-      .navbariconlar{
-        display:none;
-      }
-  }
+}
 
-  @media(min-width: 1000.98px){
-        .navbarbody{
-            display:none
-        }
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) {
+}
+
+// Medium devices (tablets, less than 992px)
+@media (min-width: 991.98px) {
+}
+@media (max-width: 1600.98px) {
+  .navbariconlar {
+    display: none;
+  }
+}
+
+@media (min-width: 1000.98px) {
+  .navbarbody {
+    display: none;
+  }
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  
+}
+.dropbtn {
+   
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: flex;
   }
