--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -2,21 +2,18 @@
   background-color: white;
   height: 70px;
 }
-.navbarLogo {
-  width: 180px;
-  max-height: 70px;
-}
 .inputForm {
-  width: 65%;
+  width: 62%;
+  
 }
 
 .navbarToggle {
-  margin-bottom: 30px;
+  margin-top:5px;
+  margin-bottom:20px;
   float: right;
 }
 .navFormControl {
   border-radius: 25px 0px 0px 25px;
-
   max-height: 50px;
   font-weight: 600;
 }
@@ -42,26 +39,30 @@
 .Navbar span {
   font-weight: 600;
 }
-
+.navbarLogo{
+  max-width:120px;
+  position:absolute;
+  top:0px;
+  left:0px
+}
 @media (max-width: 575.98px) {
+  
   .navbarLogo {
     position: absolute;
     left: 0px;
     top: 0px;
+    
   }
 
-  .navForm {
-    display: flex;
-    justify-content: center;
-  }
-  .navFormControl {
-    display: flex;
 
-    margin-top: 40px;
-    width: 210px;
-  }
+.inputForm{
+  width:100%;
+  margin-left:0rem
+  
+}
   .navFormButton {
-    margin-top: 40px;
+    margin-top: 0px;
+ 
   }
   .navbariconlar {
     display: flex;
@@ -88,12 +89,9 @@
 
 // Medium devices (tablets, less than 992px)
 @media (min-width: 991.98px) {
+
 }
-@media (max-width: 1600.98px) {
-  .navbariconlar {
-    display: none;
-  }
-}
+
 
 @media (min-width: 1000.98px) {
   .navbarbody {
@@ -101,9 +99,12 @@
   }
 }
 
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
+
+
+
+
+
+
 
 .dropdown:hover .dropdown-content {
   display: block;
@@ -125,9 +126,9 @@
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 4000;
   }
   
   .dropdown-content a {
